--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "20.x"
+  },
+  "packageManager": "npm@10.8.1",
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.5.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^11.0.0"
   },
@@ -24,6 +28,6 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^3.4.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "15.5.6"
   }
 }
